# TiraLabra

./: .coveragerc  .gitignore  .pylintrc  LZ78.py  README.md  main.py  output.txt  pyproject.toml  tasks.py
dokumentaatio/: Käyttöohje.md  Testausdokumentti.md  Viikkoraportti1.md  määrittelydokumentti.md  toteutusdokumentti.md  viikkoraportti3.md  viikkoraportti4.md
dokumentaatio/htmlcov/: d_145eef247bfb46b6_huffman_py.html  d_145eef247bfb46b6_lz78_py.html  d_145eef247bfb46b6_tools_py.html  index.html  status.json
src/: commands.py  convert.py  decompressed.txt  huffman.py  index.py  input.txt  lz78.py  main.py  output.txt  tools.py  ui.py
src/output/stats/: stats_0.csv
src/testit/: lz78_test.py
src/tests/: huffman_test.py  lz78_test.py  tools_test.py
