[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Joacim-S <45919018+Joacim-S@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.3"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^2.17.5"
autopep8 = "^2.0.4"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
